--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "live-server public/",
-    "build": "yarn run babel src/app.js --out-file=public/js/app.js --presets=env,react --watch"
+    "build-babel": "yarn run babel src/app.js --out-file=public/js/app.js --presets=env,react --watch",
+    "build":"webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-traverse": "^6.26.0",
     "live-server": "^1.2.1",
-    "lodash": "^4.17.14"
+    "lodash": "^4.17.14",
+    "webpack": "3.1.0"
   }
 }
